# rust4ml

./: .gitignore  README.md  presentation.key
code/: Cargo.toml
code/src/: main.rs
notebooks/: .rust-classification.slides.html.swp  python-classification.ipynb  python-classification.slides.html  python-regression.ipynb  python-regression.slides.html  rust-classification.ipynb  rust-classification.slides.html  rust-regression.ipynb  rust-regression.slides.html
